# osmnx-mcp

./: .gitignore  .mcp.json  find_shortest_path.py  kew_gardens_stats.py  pyproject.toml
examples/: quickstart.py
src/osmnx_mcp/: __init__.py  cli.py  server.py
src/osmnx_mcp/resources/: graph.py
src/osmnx_mcp/tools/: enrichment.py  features.py  graph_loading.py  routing.py  spatial.py  stats.py  visualization.py
tests/: conftest.py  test_resources.py  test_routing.py  test_stats.py
