[project]
name = "osmnx-mcp"
version = "0.1.0"
description = "MCP server for OSMnx street network graphs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-code-sdk>=0.0.25",
    "fastmcp>=3.4.2",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "osmnx>=2.1.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
]

[project.scripts]
osmnx-mcp = "osmnx_mcp.cli:main"

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
testpaths = ["tests"]
pythonpath = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osmnx_mcp"]
